# mj2dgame

./: README.md  import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main0.c
app/src/main/cpp/MJ/: Btn.cpp  Btn.h  BtnUnion.cpp  BtnUnion.h  Defined.h  GameDef.h  ImgUnion.cpp  ImgUnion.h  Mj.cpp  Mj.h  MjView.cpp  MjView.h  Mjplayer.cpp  Mjplayer.h  StdAfx.h  View.cpp  View.h  main.cpp  resource.h
gradle/wrapper/: gradle-wrapper.properties
